--- a/finaldestination/package.json
+++ b/finaldestination/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
